# gemini-voice-agent

./: .env.example  .gitignore  Agent.py  ChatController.py  README.md  audioPlayer.py  chatUI.py  main.py  mic_stream.py  pyproject.toml
voice_agent/: agent.py
